@@ -6,6 +6,8 @@
 
 #include <dolfin.h>
 
+using std::pow;
+
 /// CES economy with two goods from Eaves' and Schmedders' "General
 /// equilibrium models and homotopy methods" (1999).
 
@@ -19,12 +21,31 @@ public:
 
   void F(const complex z[], complex y[])
   {
-    dolfin_error("Not implemented.");
+    // First equation
+    y[0] = z[0] + z[1] - 1.0;
+
+    // Second equation
+    const complex g0 = 4.0*pow(z[0], 0.8)*pow(z[1], 0.2) + z[1];
+    const complex g1 = pow(z[0], 0.8)*pow(z[1], 0.2) + 4.0*z[1];
+    y[1] = (10.0*z[0] + z[1]) / g0 + (4.0*z[0] + 48.0*z[1]) / g1 - 13.0;
   }
 
   void JF(const complex z[], const complex x[], complex y[])
   {
-    dolfin_error("Not implemented.");
+    // First equation
+    y[0] = x[0] + x[1];
+    
+    // Second equation
+    const complex g0 = 4.0*pow(z[0], 0.8)*pow(z[1], 0.2) + z[1];
+    const complex g1 = pow(z[0], 0.8)*pow(z[1], 0.2) + 4.0*z[1];
+    y[1] = ( ( (8.0*pow(z[0], 0.8)*pow(z[1], 0.2) + 10.0*z[1] - 
+		3.2*pow(z[0], -0.2)*pow(z[1], 1.2)) / (g0*g0) +
+	       (0.8*pow(z[0], 0.8)*pow(z[1], 0.2) + 16.0*z[1] -
+		38.4*pow(z[0], -0.2)*pow(z[1], 1.2)) / (g1*g1) ) * x[1] +
+	     ( (-8.0*pow(z[0], 1.8)*pow(z[1], -0.8) - 10.0*z[0] +
+		3.2*pow(z[0], 0.8)*pow(z[1], 0.2)) / (g0*g0) +
+	       (-0.8*pow(z[0], 1.8)*pow(z[1], -0.8) - 16.0*z[0] +
+		38.4*pow(z[0], 0.8)*pow(z[1], 0.2)) / (g1*g1) ) * x[2] );
   }
 
   unsigned int degree(unsigned int i) const
@@ -52,9 +73,9 @@ public:
     
     // Second equation
     y[1] = ( 44.0 * z[0] * z[1] + 
-	     26.0 * std::pow(z[0], 1.8) * std::pow(z[1], 0.2) -
-	     28.0 * std::pow(z[0], 0.8) * std::pow(z[1], 1.2) -
-	     52.0 * std::pow(z[0], 1.6) * std::pow(z[1], 0.4) );
+	     26.0 * pow(z[0], 1.8) * pow(z[1], 0.2) -
+	     28.0 * pow(z[0], 0.8) * pow(z[1], 1.2) -
+	     52.0 * pow(z[0], 1.6) * pow(z[1], 0.4) );
   }
 
   void JF(const complex z[], const complex x[], complex y[])
@@ -64,13 +85,13 @@ public:
 
     // Second equation
     y[1] = ( (44.0 * z[1] +
-	      46.8 * std::pow(z[0], 0.8)  * std::pow(z[1], 0.2) -
-	      22.4 * std::pow(z[0], -0.2) * std::pow(z[1], 1.2) -
-	      83.2 * std::pow(z[0], 0.6)  * std::pow(z[1], 0.4)) * x[0] +
+	      46.8 * pow(z[0], 0.8)  * pow(z[1], 0.2) -
+	      22.4 * pow(z[0], -0.2) * pow(z[1], 1.2) -
+	      83.2 * pow(z[0], 0.6)  * pow(z[1], 0.4)) * x[0] +
 	     (44.0 * z[0] +
-	      5.2  * std::pow(z[0], 1.8)  * std::pow(z[1], -0.8) -
-	      33.6 * std::pow(z[0], 0.8)  * std::pow(z[1], 1.2) -
-	      20.8 * std::pow(z[0], 1.6)  * std::pow(z[1], -0.6)) * x[1] );
+	      5.2  * pow(z[0], 1.8)  * pow(z[1], -0.8) -
+	      33.6 * pow(z[0], 0.8)  * pow(z[1], 1.2) -
+	      20.8 * pow(z[0], 1.6)  * pow(z[1], -0.6)) * x[1] );
   }
   
   unsigned int degree(unsigned int i) const
